--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+/*
+GENERAL STYLING
+*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    --heading-font: 'Familjen Grotesk';
+    --secondary-font: 'IBM Plex Mono';
+
+    --accentGreen: '#CDFFCF';
+    --accentBlue: '#80BFF7';
+    --text: '#242424';
+    --white: '#FFFFFF';
+    --elementBackground: '#F5F5F5';
+    --background: '#E9E9E9';
+
+    --CTA-button-text-shadow: 'rgba(63, 92, 113, 0.55)';
+    --CTA-button-gradient: 'linear gradient(90deg, var(--accentBlue), var(--accentGreen))';
+    --CTA-button-font-size: '23px';
+
+    --input-innershadow: 'inset 3px 4px 4px -3px rgba(0,0,0,0.25)';
+    --input-height: '60px';
+
+    --linkColor: '#4385C0';
+
+    --logo-font-size: '75px';
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+:is(h1, h2, h3, h4, h5, h6) {
+    font-family: var(--heading-font);
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: var(--logo-font-size);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+body {
+    color: var(--text);
+    font-family: var(--secondary-font);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input,
+button,
+a,
+select,
+option {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+}
+
+.CTA-button {
+    background: var(--CTA-button-gradient);
+    text-transform: uppercase;
+    font-size: var(--CTA-button-font-size);
+}
+
+.input-link {
+    background-color: var(--white);
+    box-shadow: var(--input-innershadow);
+    height: var(--input-height);
 }
