--- a/src/index.css
+++ b/src/index.css
@@ -26,23 +26,35 @@ GENERAL STYLING
     --heading-font: 'Familjen Grotesk';
     --secondary-font: 'IBM Plex Mono';
 
-    --accentGreen: '#CDFFCF';
-    --accentBlue: '#80BFF7';
-    --text: '#242424';
-    --white: '#FFFFFF';
-    --elementBackground: '#F5F5F5';
-    --background: '#E9E9E9';
+    --accentGreen: #cdffcf;
+    --accentBlue: #80bff7;
+    --text: #242424;
+    --white: #ffffff;
+    --elementBackground: #f5f5f5;
+    --background: #e9e9e9;
 
-    --CTA-button-text-shadow: 'rgba(63, 92, 113, 0.55)';
-    --CTA-button-gradient: 'linear gradient(90deg, var(--accentBlue), var(--accentGreen))';
-    --CTA-button-font-size: '23px';
+    --CTA-button-text-shadow: rgba(63, 92, 113, 0.55);
+    --CTA-button-gradient: linear-gradient(
+        90deg,
+        var(--accentBlue),
+        var(--accentGreen)
+    );
+    --CTA-button-font-size: 23px;
+    --CTA-button-border-radius: 4px;
 
-    --input-innershadow: 'inset 3px 4px 4px -3px rgba(0,0,0,0.25)';
-    --input-height: '60px';
+    --input-innershadow: inset 3px 4px 4px -3px rgba(0, 0, 0, 0.25);
+    --input-height: 60px;
 
-    --linkColor: '#4385C0';
+    --linkColor: #4385c0;
 
-    --logo-font-size: '75px';
+    --logo-font-size: 75px;
+}
+
+main {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
@@ -50,12 +62,15 @@ GENERAL STYLING
 }
 
 h1 {
+    width: fit-content;
+    margin: 0 auto;
     font-size: var(--logo-font-size);
 }
 
 body {
     color: var(--text);
     font-family: var(--secondary-font);
+    background-color: var(--background);
 }
 
 input,
@@ -72,10 +87,73 @@ option {
     background: var(--CTA-button-gradient);
     text-transform: uppercase;
     font-size: var(--CTA-button-font-size);
+    padding: 8px 52px;
+    font-weight: 700;
+    border-radius: var(--CTA-button-border-radius);
+    border: none;
+    box-shadow: inset 0 -5px 1px rgba(0, 0, 0, 0.25),
+        inset 0 4px 4px rgba(255, 255, 255, 0.55),
+        inset 0 0 5px rgba(0, 0, 0, 0.25);
+
+    & > span {
+        position: relative;
+        top: -2px;
+    }
 }
 
 .input-link {
     background-color: var(--white);
     box-shadow: var(--input-innershadow);
     height: var(--input-height);
+    border-radius: 5px;
+    border: none;
+    padding: 0 1rem;
+}
+
+/* CONTAINER STYLING */
+.content-container {
+    text-align: center;
+    padding: clamp(10px, 5vw, 102px) clamp(10px, 10vw, 160px);
+    background-color: var(--elementBackground);
+    border-radius: 15px;
+    box-shadow: 5px 6px 10px rgba(0, 0, 0, 0.25);
+    position: relative;
+    top: -100px;
+}
+
+#originalLink {
+    width: clamp(150px, 500px, 500px);
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    border: none;
+    margin-bottom: 46px;
+    margin-top: 42px;
+}
+
+form > div > label {
+    font-size: 23px;
+    font-weight: 700;
+    margin-bottom: 11px;
+}
+
+/* 
+LOGO STYLING 
+*/
+#logo {
+    text-align: center;
+    line-height: 1.2;
+    position: relative;
+}
+#logo > p {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#hand {
+    position: absolute;
+    right: 5.5rem;
+    top: 10px;
 }
