--- a/src/index.css
+++ b/src/index.css
@@ -48,10 +48,12 @@ GENERAL STYLING
     --linkColor: #4385c0;
 
     --logo-font-size: 75px;
+
+    --smallShadow: 5px 6px 10px rgba(0, 0, 0, 0.25);
 }
 
 main {
-    min-height: 100vh;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,6 +70,7 @@ h1 {
 }
 
 body {
+    height: 100vh;
     color: var(--text);
     font-family: var(--secondary-font);
     background-color: var(--background);
@@ -91,13 +94,17 @@ option {
     font-weight: 700;
     border-radius: var(--CTA-button-border-radius);
     border: none;
-    box-shadow: inset 0 -5px 1px rgba(0, 0, 0, 0.25),
+    box-shadow: inset 0 -5px 1px rgba(0, 0, 0, 0.35),
         inset 0 4px 4px rgba(255, 255, 255, 0.55),
         inset 0 0 5px rgba(0, 0, 0, 0.25);
 
     & > span {
         position: relative;
         top: -2px;
+    }
+
+    &:hover {
+        cursor: pointer;
     }
 }
 
@@ -116,9 +123,8 @@ option {
     padding: clamp(10px, 5vw, 102px) clamp(10px, 10vw, 160px);
     background-color: var(--elementBackground);
     border-radius: 15px;
-    box-shadow: 5px 6px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--smallShadow);
     position: relative;
-    top: -100px;
 }
 
 #originalLink {
@@ -133,7 +139,7 @@ option {
     margin-top: 42px;
 }
 
-form > div > label {
+.input-container > label {
     font-size: 23px;
     font-weight: 700;
     margin-bottom: 11px;
@@ -154,6 +160,17 @@ LOGO STYLING
 
 #hand {
     position: absolute;
+
     right: 5.5rem;
     top: 10px;
+}
+
+@keyframes flick-s {
+}
+
+.flick-s {
+    animation-name: flick-s;
+    animation-duration: 7s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
